--- a/src/assets/css/transition.css
+++ b/src/assets/css/transition.css
@@ -1,7 +1,7 @@
 .no-mode-translate-enter-active, .no-mode-translate-leave-active {
   position: absolute;
-  left: 2rem;
-  width: calc(100% - 4rem);
+  width: 100%;
+  height: 100%;
   backface-visibility: hidden;
   transition: transform .3s ease-in-out;
 }
@@ -13,12 +13,11 @@
 }
 
 .turn-enter-active, .turn-leave-active {
-  position: absolute;
-  width: 100%;
   backface-visibility: hidden;
 }
 .turn-enter-active {
-  transition: transform .15s ease-in-out .15s;
+  display: none;
+  transition: transform .15s ease-in-out;
 }
 .turn-leave-active {
   transition: transform .15s ease-in-out;
